# play-TicTacToe

./: .gitignore  01.ipynb  01.py  02.ipynb  LICENSE.txt  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: 01-checkpoint.ipynb  02-checkpoint.ipynb
models/: dqn_tictactoe-v0.pth  gomoku_a2c_final.pth  gomoku_ep_1500.pth  gomoku_ep_1600.pth  gomoku_ep_1700.pth  gomoku_ep_1800.pth  gomoku_ep_1900.pth
